feat: Implement user authentication and OTP verification system
- Added bcrypt for password hashing and jsonwebtoken for JWT handling.
- Created authController for user signup, login, OTP sending, and verification.
- Introduced Otp model for managing OTPs in the database.
- Integrated Twilio service for sending OTPs via SMS.
- Updated server routes to include authentication endpoints.
- Created leaderboard functionality to fetch top users based on XP.
- Removed deprecated crops functionality and related routes.
- Added Farm and User models to manage user and farm data.
- Updated package.json with new dependencies.
- Modified service worker to use PNG icons instead of SVG.
- Refactored database connection logic for better organization.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@
 PORT=4000
 MONGO_URI=mongodb://localhost:27017/farmstellar
 NODE_ENV=development
+
+NEXT_PUBLIC_API_URL=http://localhost:4000
+
+# JSON Web Token secret (set this to a secure random value in production)
+JWT_SECRET=
+
+# Twilio Configuration
+TWILIO_AUTH_TOKEN=
+TWILIO_ACCOUNT_SID=
+TWILIO_PHONE_NUMBER=    
