--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@vercel/analytics": "^1.5.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compression": "^1.8.1",
@@ -26,13 +27,16 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "i18next": "^25.7.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
-    "next": "16.0.5",
+    "next": "^16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
