--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "app/(farmer)/settings/profile/page.jsx"
+    "app/(farmer)/settings/profile/page.jsx",
+    "lib/auth.js"
   ],
   "exclude": ["node_modules"]
 }
